Fixed tooltip shortcut spacing

--- a/commons/components/Tooltip.css
+++ b/commons/components/Tooltip.css
@@ -25,15 +25,12 @@
     div {
         background-color: var(--neutral-700);
         color: var(--neutral-300);
-        border-radius: 4px;
+        border-radius: 50px;
         padding: 0px 4px;
         font-size: 12px;
         border: 1px solid var(--neutral-500);
         font-weight: 600;
-    }
-
-    /* If the left text is absent and div is first child */
-    div:not(:first-child) {
         margin-left: 10px;
+        margin-right: -6px;
     }
 }
